--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,14 +6,14 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-29.10.beta <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_lid:
     path: ../
-  state_notifier: 0.6.0
+  state_notifier: ^0.7.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
