--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,14 @@ homepage: https://github.com/kmartins/lid
 documentation: https://github.com/kmartins/lid
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.12.0-29.10.beta <3.0.0"
+  flutter: ">=1.20.0 <2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  state_notifier: ^0.6.0
-  nested: ^0.0.4
+  nested: ^0.0.5-nullsafety.1
+  state_notifier: ^0.7.0-nullsafety.0  
 
 dev_dependencies:
   flutter_test:
