--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  nested: ^0.0.5-nullsafety.1
-  state_notifier: ^0.7.0-nullsafety.0  
+  nested: ^1.0.0
+  state_notifier: ^0.7.0 
 
 dev_dependencies:
   flutter_test:
