--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   nested: ^1.0.0
   state_notifier: ^0.7.0 
 
-dev_dependencies:
+dev_dependencies:  
   flutter_test:
     sdk: flutter
+  lint: ^1.5.1
