--- a/.github/workflows/flutter_lid.yaml
+++ b/.github/workflows/flutter_lid.yaml
@@ -3,17 +3,26 @@ name: flutter_lid
 on:
   push:
     branches:
-      - main
+      - "main"
+    paths:
+      - "packages/flutter_lid/**"
+      - ".github/workflows/flutter_lid.yaml"
   pull_request:
     branches:
-      - main
+      - "main"
+    paths:
+      - "packages/flutter_lid/**"
+      - ".github/workflows/flutter_lid.yaml"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: packages/flutter_lid
     steps:
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1.3.0
+      - uses: subosito/flutter-action@v1.4.0
       - name: Install Dependencies
         run: flutter packages get
       - name: Check format
@@ -23,7 +32,7 @@ jobs:
       - name: Run tests
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
       - name: Check Code Coverage
-        uses: ChicagoFlutter/lcov-cop@v1.0.0
+        uses: ChicagoFlutter/lcov-cop@v1.0.2
         with:
           path: packages/flutter_bloc/coverage/lcov.info
       - name: Upload coverage to Codecov
